update _overrides.scss fix signin instructions visibility

--- a/paragon/_overrides.scss
+++ b/paragon/_overrides.scss
@@ -18,6 +18,11 @@ a#forgot-password {
     display: none !important;
 }
 
-#sign-in-form > div.mt-4.mb-3.h4::after {
-    content: 'Please click the button below to sign in using Azure';
+#sign-in-form > div.mt-4.mb-3.h4 {
+    visibility: hidden;
+}
+
+#sign-in-form > div.mt-4.mb-3.h4::before {
+    visibility: visible;
+    content: 'Please click the button below to sign in using Azure:';
 }
